--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hpp": "^0.2.3",
     "lodash": "^4.17.15",
     "memorystore": "^1.6.2",
+    "rate-limiter-flexible": "^2.1.4",
     "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
