--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lodash": "^4.17.15",
     "memorystore": "^1.6.2",
     "rate-limiter-flexible": "^2.1.4",
-    "request-promise-native": "^1.0.8"
+    "request-promise-native": "^1.0.8",
+    "simple-node-logger": "^18.12.24"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
