remove tests restrictions from package.json

--- a/package.json
+++ b/package.json
@@ -28,11 +28,7 @@
     "url": "https://github.com/sollerias/omni_channel_backend/issues"
   },
   "jest": {
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "/omnichannel",
-      "/utils"
-    ]
+    "testEnvironment": "node"
   },
   "homepage": "https://",
   "dependencies": {
